--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,22 @@
 version: '3.8'
+
 services:
   app:
-    build: .
-    volumes:
-      - .:/app
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: payflow-app
     ports:
       - "3000:3000"
-    command: npm start
-    
+    volumes:
+      - .:/app
+
   test:
     build:
       context: .
       dockerfile: Dockerfile.test
-    volumes:
-      - .:/app
+    image: payflow-test
     depends_on:
       - app
-    command: npm test
-
+    volumes:
+      - .:/app
